--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./Informatika eng.pdf">File</a>
+    <a href="./1.docx">File</a>
 </body>
 </html>
