--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+<pre>
    Экономику в целом изучает:
 макроэкономика, т.е.  общий уровень цен, валовой национальный доход инфляцию и т.д.
 микроэкономика, т.е. деятельность отдельных экономических субъектов, доход отдельного предприятия
@@ -1663,6 +1664,6 @@
 
 
 
-
+</pre>
 </body>
 </html>
